<resources>
    <string name="app_name">MyStock</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="password_hint">Password</string>
    <string name="email_hint" translatable="false">Email</string>
    <string name="btn_sign_in">Sign In</string>
    <string name="btn_sign_up">Sign up</string>
    <string name="dont_have_account">Don\'t have account?</string>
    <string name="confirm_password">Confirm password</string>
    <string name="confirm_password_hint">Confirm password</string>
    <string name="name_hint">Name</string>
    <string name="sign_in_google">Sign in with Google</string>
    <string name="btn_logout">Logout</string>
    <string name="button_back_sign_up">button back sign up</string>
    <string name="menu_home">Home</string>
    <string name="menu_products">Products</string>
    <string name="menu_profile">Profile</string>
    <string name="code_hint">Code</string>
    <string name="amount_hint">Amount</string>
    <string name="description_hint">Description</string>
    <string name="weight_hint">Weight</string>
    <string name="category_hint">Category</string>
    <string name="purchase_price_hint">Purchase price</string>
    <string name="sale_price_hint">Sale price</string>
    <string name="product_info_label">Product Info *</string>
    <string name="register_product_tittle">Register Product</string>
    <string name="add_info_label">Additional Information</string>
    <string name="purchase_and_sale_price_label">Purchase and Sale price *</string>
    <string name="add_product_btn">Add Product</string>
    <string name="button_dropdown_entry_desc">button dropdown to view all entry transaction</string>
    <string name="lorem_ipsum" translatable="false">lorem ipsum</string>
    <string name="background_image_sale_icon_desc">Background image of icon sale icon</string>
    <string name="button_dropdown_exit_desc">button dropdown to view all exit transaction</string>
    <string name="background_image_purchase_icon_desc">Background image of icon Purchase icon</string>
    <string name="unit_hint">Unit</string>
    <string name="button_scan_barcode_desc">Button scan barcode</string>
    <string name="btn_add_new_transaction">Add new transaction</string>
    <string name="nothing_found_text">Nothing found</string>
    <string name="image_without_data_desc">Image without data</string>
    <string name="fab_btn_add_new_transaction_desc">Floating button add new Transaction</string>
    <string name="btn_add_new_product">Add new Product</string>
    <string name="btn_fab_new_add_new_product">Floating button add new Product</string>
    <string name="btn_delete_selected_products">Delete selected products</string>
    <string name="btn_cancel_the_delete_selection">Cancel the delete selection</string>
    <string name="image_products_without_data_desc">Image products without data</string>
    <string name="profile_user_image_desc">Profile user image</string>
    <string name="profile_banner_image_desc">Profile banner Image</string>
    <string name="email_text" translatable="false">Email</string>
    <string name="since_text">Since</string>
    <string name="fake_email_text" translatable="false">userprofile@gmail.com</string>
    <string name="fake_date" translatable="false">20/01/23</string>
    <string name="image_button_edit_profile_desc">Image button edit profile</string>
    <string name="btn_confirm_sale">Confirm Sale</string>
    <string name="confirm_purchase">Confirm Purchase</string>
    <string name="fab_btn_confirm_product_selection_desc">Floating button confirm product selection</string>
    <string name="banner_illustration_sign_in_desc">banner illustration sign in</string>
    <string name="sign_in_text">Sign in with your account!</string>
    <string name="create_an_account_text">Create an account!</string>
    <string name="image_loading_landing_page_desc">Image loading landing page</string>
    <string name="image_button_logout_desc">Image button logout</string>
    <string name="chip_all">All</string>
    <string name="chip_last_month">Last Month</string>
    <string name="chip_last_week">Last Week</string>
    <string name="chip_today">Today</string>
    <string name="transactions_balance_text">Transactions Balance</string>
    <string name="fake_money" translatable="false">R$ 540,54</string>
    <string name="profit_on_sales_text">Profile on Sales</string>
    <string name="main_activities_text">Main Activities</string>
    <string name="add_product_text">Add product</string>
    <string name="add_sale_text">Add Sale</string>
    <string name="add_purchase_text">Add Purchase</string>
    <string name="image_icon_new_sale_desc">Image icon new sale</string>
    <string name="image_icon_new_purchase_desc">Image icon new Purchase</string>
    <string name="image_icon_new_product_desc">Image icon new Product</string>
    <string name="image_icon_product_description_desc">Image icon product description</string>
    <string name="image_icon_product_category_desc">Image icon product category</string>
    <string name="image_icon_product_weight_desc">Image icon product weight</string>
    <string name="image_icon_product_barcode_desc">Image icon product barcode</string>
    <string name="image_icon_product_sale_price_desc">Image icon product sale price</string>
    <string name="image_icon_product_purchase_price_desc">Image icon product purchase price</string>
    <string name="image_icon_product_desc">Image icon product</string>
    <string name="image_button_remove_an_product_desc">Image button remove an product</string>
    <string name="image_button_add_an_product_desc">Image button add an product</string>
    <string name="recently_transactions_text">Recently Transactions</string>
    <string name="nothing_found_transaction_text">Nothing found!</string>
    <string name="see_all_text">See all</string>
    <string name="image_value_in_stock_desc">Image value in stock</string>
    <string name="image_all_products_desc">Image all products</string>
    <string name="image_entry_transactions_desc">Image entry transactions</string>
    <string name="image_exit_transactions_desc">Image exit transactions</string>
    <string name="error_sign_in">Error connecting. Check your email and password.</string>
    <string name="error_sign_in_google">Error connecting. Try Again!</string>
    <string name="send">Send</string>
    <string name="cancel">Cancel</string>
    <string name="send_new_link">Do you want another verification link sent in your email?</string>
    <string name="sended_link">A confirmation link has been sent to your email!</string>
    <string name="little_password">Password too small! the minimum is 6 characters!</string>
    <string name="password_do_not_match">Passwords do not match!</string>
    <string name="invalid_user">Invalid User!</string>
    <string name="auth_failed">Authentication failed.</string>
    <string name="invalid_credentials">Invalid Credentials!</string>
    <string name="product_added">Product Added!</string>
    <string name="error_to_add_product">Error to add!</string>
    <string name="value_in_stock">Value in Stock</string>
    <string name="all_products">All Products</string>
    <string name="entry">Entry</string>
    <string name="exit">Exit</string>
    <string name="success_in_delete">The products have been deleted!</string>
    <string name="registered_products">Registered Products</string>
    <string name="success_in_add_transaction">Transaction added!</string>
    <string name="error_to_add_transaction">Error adding transaction!</string>
    <string name="select_at_least_one">Select at least one!</string>
    <string name="sales">Sales</string>
    <string name="purchases">Purchases</string>
    <string name="dont_have_products">You have no products yet!</string>
    <string name="register_exit">Register Exit</string>
    <string name="register_entry">Register entry</string>
    <string name="select_products">Select products</string>
    <string name="add_products">Add Products</string>
    <string name="notifications">Notifications</string>
    <string name="transactions">Transactions</string>
    <string name="menu_transactions">Transactions</string>
    <string name="empty_name">Empty name!</string>
    <string name="image_banner_forgot_password_desc">Image banner Forgot Password</string>
    <string name="btn_send_email_reset_password">Send Email</string>
    <string name="enter_your_email_to_receive_a_password_reset_link_text">Enter your email to receive a password reset link</string>
    <string name="email_sent">Email sent!</string>
    <string name="wrong_email">Wrong email!</string>
    <string name="image_banner_stock_home_page_desc">image banner stock home page desc</string>
    <string name="fill_in_all_required_information_text">Fill in all required information!</string>
    <string name="error_registering_product_text">Error registering product</string>
    <string name="the_scanner_will_be_present_in_the_next_att_text">The Scanner will be present in the next att.</string>
    <string name="error_sending_email_try_again_text">Error sending email. Try Again!</string>
    <string name="error_sending_email_text">Error sending verification email!</string>
    <string name="fill_in_all_information_text">Fill in all information!</string>
    <string name="success_in_delete_transaction_text">Success in delete Transaction!</string>
    <string name="error_deleting_transaction_text">Error deleting Transaction!</string>
    <string name="error_deleting_products_text">Error deleting products</string>
    <string name="web_client_id" translatable="false">638782270067-821vjcom4h6smklrsv8rmuso9old6mi1.apps.googleusercontent.com</string>
    <string name="no_google_accounts_found_text">No Google Accounts found.</string>
    <string name="sign_in_fail_text">Sign-in Fail</string>
    <string name="network_error_text">Network error</string>
    <string name="error_getting_credential_text">Error getting credential</string>
    <string name="user_don_t_found_text">User don\'t found</string>
    <string name="error_initializing_authentication_text">Error initializing authentication</string>
    <string name="error_in_validation_text">Error in validation.</string>
    <string name="rate_the_app">Rate the app</string>
    <string name="bug_report">Bug Report</string>
    <string name="rate_the_app_question">Do you want to report a bug? You will be redirected to the form link.</string>
    <string name="bug_report_question">Do you want to rate the APP on Google Play?</string>

    <string name="rate_the_app_url" translatable="false">https://play.google.com/store/apps/details?id=com.vitorhilarioapps.mystock</string>
    <string name="bug_report_url" translatable="false">https://forms.gle/r6zUymdrtdQYLav2A</string>
    <string name="report">Report</string>
    <string name="rate">Rate</string>
    <string name="the_barcode_can_only_contain_numbers_text">The barcode can only contain numbers!</string>
    <string name="error">Error</string>

    <string-array name="category_list">
        <item></item>
        <item>Clothes</item>
        <item>Toys</item>
        <item>Utilities</item>
        <item>Decoration</item>
        <item>Personal hygiene</item>
        <item>Frozen food</item>
        <item>Non-perishable food</item>
        <item>Perishable food</item>
        <item>Drinks</item>
        <item>Vegetables and Meats</item>
        <item>Cleaning products</item>
        <item>Pet products</item>
    </string-array>

    <string-array name="weight_type_list">
        <item></item>
        <item>kG</item>
        <item>g</item>
        <item>mG</item>
        <item>L</item>
        <item>mL</item>
        <item>lbs</item>
        <item>ton</item>
    </string-array>
</resources>