<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_profile_banner_user"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:elevation="0dp"
        app:cardCornerRadius="0dp"
        app:cardElevation="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeWidth="0dp">

        <ImageView
            android:id="@+id/iv_profile_banner_user"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/profile_banner_image_desc"
            android:scaleType="centerCrop" />

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_profile_user"
        android:layout_width="120dp"
        android:layout_height="120dp"
        app:cardCornerRadius="60dp"
        app:layout_constraintBottom_toBottomOf="@id/cv_profile_banner_user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cv_profile_banner_user"
        app:strokeColor="@color/white"
        app:strokeWidth="2dp">

        <ImageView
            android:id="@+id/iv_profile_user"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/profile_user_image_desc"
            android:scaleType="centerCrop"
            android:src="@drawable/user_avatar" />

    </com.google.android.material.card.MaterialCardView>

    <ImageButton
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="@dimen/gap_normal"
        android:layout_marginEnd="@dimen/gap_normal"
        android:background="@drawable/image_button_bg"
        android:contentDescription="@string/image_button_edit_profile_desc"
        android:padding="@dimen/gap_small"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_pencil"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cv_profile_banner_user" />

    <TextView
        android:id="@+id/tv_profile_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/gap_normal"
        android:text="@string/lorem_ipsum"
        android:textSize="@dimen/font_size_larger"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cv_profile_user" />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/gap_larger"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_profile_user_name"
        app:strokeColor="@color/black"
        app:strokeWidth="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/gap_normal">

            <TextView
                android:id="@+id/tv_profile_user_email_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_text"
                android:textColor="@color/black"
                android:textSize="@dimen/font_size_normal"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_profile_user_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fake_email_text"
                android:textSize="@dimen/font_size_normal" />

            <TextView
                android:id="@+id/tv_profile_user_registration_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/gap_normal"
                android:text="@string/since_text"
                android:textColor="@color/black"
                android:textSize="@dimen/font_size_normal"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_profile_user_registration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fake_date"
                android:textSize="@dimen/font_size_normal" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_profile_sign_out"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_margin="@dimen/gap_normal"
        android:background="@drawable/button_bg"
        android:text="@string/btn_logout"
        android:textColor="@color/white"
        android:textSize="@dimen/font_size_normal"
        app:backgroundTint="@null"
        app:cornerRadius="0dp"
        app:icon="@drawable/ic_exit"
        app:iconGravity="textEnd"
        app:iconTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>