<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/gap_normal"
    android:orientation="vertical">

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chip_group_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/gap_normal"
        app:selectionRequired="true"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_info_all_history"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:text="@string/chip_all" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_info_last_month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:text="@string/chip_last_month" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_info_last_week"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:text="@string/chip_last_week" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_info_last_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:text="@string/chip_today" />

    </com.google.android.material.chip.ChipGroup>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_marginHorizontal="@dimen/gap_normal"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="@color/black"
        app:strokeWidth="1dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/info_background">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guide_line_info_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.6" />

            <TextView
                android:id="@+id/tv_info_transaction_balance_tittle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/gap_normal"
                android:layout_marginTop="@dimen/gap_normal"
                android:ellipsize="end"
                android:maxLines="2"
                android:text="@string/transactions_balance_text"
                android:textColor="@color/white"
                android:textSize="@dimen/font_size_normal"
                app:layout_constraintEnd_toEndOf="@id/guide_line_info_item"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_info_transaction_balance_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/gap_normal"
                android:layout_marginTop="4dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/fake_money"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@id/guide_line_info_item"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_info_transaction_balance_tittle" />

            <TextView
                android:id="@+id/tv_info_profit_on_sales_tittle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/gap_normal"
                android:layout_marginTop="@dimen/gap_normal"
                android:ellipsize="end"
                android:maxLines="2"
                android:text="@string/profit_on_sales_text"
                android:textColor="@color/white"
                android:textSize="@dimen/font_size_normal"
                app:layout_constraintEnd_toEndOf="@id/guide_line_info_item"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_info_transaction_balance_value" />

            <TextView
                android:id="@+id/tv_info_profit_on_sales_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/gap_normal"
                android:layout_marginTop="4dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/fake_money"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@id/guide_line_info_item"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_info_profit_on_sales_tittle" />

            <ImageView
                android:id="@+id/iv_info_banner"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_margin="@dimen/gap_normal"
                android:contentDescription="@string/image_banner_stock_home_page_desc"
                android:scaleType="fitCenter"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/guide_line_info_item"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</LinearLayout>

